# filekaefer

./: .gitignore  Cargo.toml  Makefile  README.adoc
src/: config.rs  kafka.rs  main.rs  tail.rs
